@@ -1097,7 +1097,10 @@
 
               <listitem>
                 <para>Added in Shorewall 4.4.4. Displays the applicable policy
-                between each pair of zones.</para>
+                between each pair of zones. Note that implicit intrazone
+                ACCEPT policies are not displayed for zones associated with a
+                single network where that network doesn't specify
+                <option>routeback</option>. </para>
               </listitem>
             </varlistentry>
 
