@@ -284,8 +284,11 @@ None.
 
     Example:
 
-	net 	=> loc is DROP using chain net2loc
+	net 	=>	loc	DROP using chain net2loc
 
+    Note that implicit intrazone ACCEPT policies are not displayed for
+    zones associated with a single network where that network
+    doesn't specify 'routeback'.
 
 ----------------------------------------------------------------------------
                 N E W   F E A T U R E S   I N   4 . 4 . 0
